# nas-deployment-public

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .resource-manifest.yml  AGENTS.md  README.md  context.md  research.md  scout-ansible.md
.github/: pull_request_template.md
cigbutt/: README.md  pyproject.toml
cigbutt/examples/: sample_financials_fy2024.json  sample_financials_h12025.json  sample_supplemental.json
cigbutt/src/cigbutt/: __init__.py  cli.py  config.py  io_utils.py  models.py  trace.py  utils.py
cigbutt/src/cigbutt/commands/: __init__.py  analyze_cmd.py  e2e_cmd.py  probe_cmd.py  scan_cmd.py
cigbutt/src/cigbutt/llm/: __init__.py  dashscope.py
cigbutt/src/cigbutt/markets/: __init__.py  eastmoney.py  normalize.py
cigbutt/src/cigbutt/providers/: __init__.py  akshare_provider.py  alpha_vantage_provider.py  base.py  eodhd_provider.py  finnhub_provider.py  fmp_provider.py  openfigi_provider.py  polygon_provider.py  router.py  sec_provider.py  sina_provider.py  tradingview_provider.py  twelvedata_provider.py  yfinance_provider.py
cigbutt/src/cigbutt/strategy/: __init__.py  factcheck.py  metrics.py  pipeline.py  qualitative.py  subtype.py
cigbutt/tests/: test_dashscope_config.py  test_factcheck_core.py  test_metrics_core.py  test_normalize_ticker.py  test_smoke_imports.py
docs/: edge-deploy-optimization.md  observability-k8s-migration.md  private-vault-bootstrap.md
edge/: README.md
envoy/: README.md
grafana/: README.md  alert-notifications.yaml  alert-rules.yaml  datasources.yaml  deploy-alerts-fixed.sh  deploy-alerts.sh  (+1 more)
(+314 files in other folders)
