[project]
name = "cigbutt"
version = "0.2.1"
description = "Cigbutt strategy library and CLI (HK/CN/US)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tradingview-screener>=3.1.0",
]

[project.scripts]
cigbutt = "cigbutt.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cigbutt"]
